worked on key spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -100,15 +100,13 @@ main .input-div .text-field {
 }
 
 .button-container {
-  -webkit-margin-before: 5%;
-          margin-block-start: 5%;
+  margin-top: 5%;
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   padding: 1.5em;
-  grid-gap: 5%;
-  grid-row-gap: 7%;
-  height: 350px;
+  grid-gap: 12px;
+  grid-row-gap: 18px;
 }
 .button-container input[type=button] {
   cursor: pointer;
