--- a/scss/lightTheme.scss
+++ b/scss/lightTheme.scss
@@ -63,11 +63,12 @@ main{
      @include shadow(4px,$darkOrange);
 
 }
-
+//attribution
 .attribution {
 
     color:$veryDarkGrayishYellow;
     
 }
 .attribution a { 
-color:$darkModerateCyan}
+color:$darkModerateCyan;
+}
